update to prevent wrapping in the start and end contents

--- a/packages/terra-clinical-header/src/Header.scss
+++ b/packages/terra-clinical-header/src/Header.scss
@@ -28,6 +28,11 @@
     flex: 0 0 auto;
     height: 100%;
     position: relative;
+
+    & > * {
+      width: 100%;
+      display: flex;
+    }
   }
 
   .title-container {
